fix clojure version (1.7.0-alpha5)

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -53,7 +53,7 @@ eclipse.project {
 }
 
 dependencies {
-  compile 'org.clojure:clojure:1.7.0-alpha'
+  compile 'org.clojure:clojure:1.7.0-alpha5'
   compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
   compile external['clojure.core.match']
   compile('com.cognitect:transit-clj:0.8.259') {
