build core to private repository (../artifacts)

--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -44,3 +44,7 @@ dependencies {
   compile project(':sneer-android-api')
   compile 'me.sneer:core:+'
 }
+
+repositories {
+  ivy { url '../../artifacts' }
+}
