--- a/server/build.gradle
+++ b/server/build.gradle
@@ -35,8 +35,8 @@ dependencies {
   compile 'http-kit:http-kit:2.1.19'
   compile 'ring:ring-core:1.3.2'
   compile 'compojure:compojure:1.3.1'
-  compile 'org.clojure:clojure:1.6.0'
-  compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
+  compile 'org.clojure:clojure:1.7.0-alpha5'
+  compile 'org.clojure:core.async:0.1.346.0-17112a-alpha'
   compile external['clojure.core.match']
   compile project(':core')
   testCompile 'midje:midje:1.6.3'
