make server runnable directy from gradlew

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -41,3 +41,12 @@ dependencies {
   compile project(':core')
   testCompile 'midje:midje:1.6.3'
 }
+
+apply plugin: 'application'
+mainClassName = 'sneer.server.main'
+run {
+  def serverOptions = project.properties.get('server-options', '')
+  if (!serverOptions.empty) {
+    args Eval.me(serverOptions)
+  }
+}
