--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,6 @@ before_script:
   - adb devices
   - adb shell input keyevent 82 &
 
-script: ./gradlew check connectedAndroidTest
+script:
+  - ./gradlew install :core:publish
+  - android/gradlew -f android/build.gradlew check connectedAndroidTest
