--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ before_script:
   - android-wait-for-emulator
   - adb devices
   - adb shell input keyevent 82 &
+  - wget https://raw.githubusercontent.com/technomancy/leiningen/2.4.3/bin/lein && chmod +x lein
+  - export PATH=$PATH:$(pwd)
 
 script:
-  - ./gradlew install :core:publish
-  - android/gradlew -f android/build.gradlew check connectedAndroidTest
+  - ./gradlew check install :core:publish
+  - android/gradlew --build-file android/build.gradlew connectedAndroidTest
