Location: app created

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,6 +4,7 @@ project(':sneer-android-api').projectDir = new File('android-api')
 include 'android.main'
 
 include 'apps:sendlocation'
+include 'apps:location'
 //        'apps:sendpics',
 //        'apps:voicemessage',
 //        'apps:sendfiles',
