--- a/android/ipc-prototype-server/src/main/AndroidManifest.xml
+++ b/android/ipc-prototype-server/src/main/AndroidManifest.xml
@@ -21,6 +21,18 @@
             android:name=".SendMessage"
             android:exported="true" >
         </service>
+
+        <receiver
+            android:name=".InstalledPlugins"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <data android:scheme="package" />
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
