--- a/android/android.main/src/main/AndroidManifest.xml
+++ b/android/android.main/src/main/AndroidManifest.xml
@@ -32,20 +32,27 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <receiver android:name="sneer.android.GcmBroadcastReceiver" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
-                <category android:name="me.sneer" />
-            </intent-filter>
-        </receiver>
-        <receiver android:name="sneer.android.gcm.GcmRegistrationAlarmReceiver" >
-        </receiver>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <receiver android:name="sneer.android.SneerBoot" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name="sneer.android.GcmBroadcastReceiver" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="me.sneer" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name="sneer.android.gcm.GcmRegistrationAlarmReceiver" />
+
+        <!--
         <receiver
             android:name="sneer.android.ipcold.PluginMonitor"
             android:enabled="true"
@@ -65,10 +72,8 @@
                 <action android:name="me.sneer.TUPLE_SPACE" />
             </intent-filter>
         </service>
+        -->
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name="sneer.android.ui.MainActivity"
