Main: Text message API working.

--- a/android/android.main/src/main/AndroidManifest.xml
+++ b/android/android.main/src/main/AndroidManifest.xml
@@ -74,6 +74,9 @@
         </service>
         -->
 
+        <service
+            android:name="sneer.android.ipc.SendMessage"
+            android:exported="true" />
 
         <activity
             android:name="sneer.android.ui.MainActivity"
