--- a/android/apps/location/src/main/AndroidManifest.xml
+++ b/android/apps/location/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ppeccin.sneer.location">
+    package="sneer.location">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
