--- a/android/apps/location/build.gradle
+++ b/android/apps/location/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.ppeccin.sneer.location"
+        applicationId "sneer.location"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
