Main: package name me.sneer -> sneer.main

--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -22,7 +22,7 @@ android {
   defaultConfig {
     minSdkVersion external.android.minSdkVersion
     targetSdkVersion external.android.sdkVersion
-    applicationId "me.sneer"
+    applicationId "sneer.main"
     versionCode 9
     versionName "0.3.0"
   }
