--- a/android/android-api/build.gradle
+++ b/android/android-api/build.gradle
@@ -58,7 +58,7 @@ android.libraryVariants.all { variant ->
 
   artifacts {
     archives ourJar
-//    archives javadocJar
+   archives javadocJar
     archives sourcesJar
   }
 
