--- a/android/android.main/src/main/AndroidManifest.xml
+++ b/android/android.main/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name="sneer.android.GcmBroadcastReceiver" >
+        <receiver android:name="sneer.android.gcm.GcmBroadcastReceiver" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <category android:name="sneer.main" />
