--- a/android/android.main/src/main/AndroidManifest.xml
+++ b/android/android.main/src/main/AndroidManifest.xml
@@ -74,13 +74,7 @@
         </activity>
 
         <activity
-            android:name="sneer.android.ui.flux.ConversationListActivity">
-            <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="sneer.android.flux2.ConversationListActivity">
+            android:name="sneer.android.ui.ConversationListActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
