--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     exclude group: 'com.netflix.rxjava'
   }
   compile project(':sneer-android-api')
+
+  compile 'com.android.support:appcompat-v7:21.0.+'
+  // compile 'com.android.support:cardview-v7:21.0.+'
+  // compile 'com.android.support:recyclerview-v7:21.0.+'
 }
 
 def skummetArtifactsDir = '../../skummet-artifacts'
