--- a/spikes/referrer/app/src/main/AndroidManifest.xml
+++ b/spikes/referrer/app/src/main/AndroidManifest.xml
@@ -22,6 +22,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="play.google.com"
+                    android:pathPrefix="/store/apps/details?referrer="
+                    />
+            </intent-filter>
         </activity>
     </application>
 
