--- a/android/apps/location/src/main/AndroidManifest.xml
+++ b/android/apps/location/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
 
         <meta-data
