--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -46,6 +46,11 @@ dependencies {
   compile 'com.android.support:appcompat-v7:21.0.+'
   // compile 'com.android.support:cardview-v7:21.0.+'
   // compile 'com.android.support:recyclerview-v7:21.0.+'
+
+
+    compile 'me.sneer:crypto:+'
+    compile 'me.sneer:sneer-java-api:+'
+
 }
 
 def skummetArtifactsDir = '../../skummet-artifacts'
