--- a/android/android.main/src/main/AndroidManifest.xml
+++ b/android/android.main/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
         </activity>
 
         <activity
-            android:name="sneer.android.ui.ConversationListActivity"
+            android:name="sneer.android.ui.ConvosActivity"
             android:theme="@style/AppThemeMaterial">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
