--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -43,7 +43,7 @@ dependencies {
   }
   compile project(':sneer-android-api')
 
-  compile 'com.android.support:appcompat-v7:21.0.+'
+  compile 'com.android.support:appcompat-v7:22.1.1'
   // compile 'com.android.support:cardview-v7:21.0.+'
   // compile 'com.android.support:recyclerview-v7:21.0.+'
 }
