--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -25,6 +25,7 @@ android {
     applicationId "sneer.main"
     versionCode 21
     versionName "0.3.12"
+    multiDexEnabled true
   }
 
   buildTypes {
