--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -47,6 +47,7 @@ dependencies {
   compile 'com.android.support:appcompat-v7:22.1.1'
   // compile 'com.android.support:cardview-v7:21.0.+'
   // compile 'com.android.support:recyclerview-v7:21.0.+'
+  compile 'com.android.support:multidex:1.0.0'
 }
 
 def skummetArtifactsDir = '../../skummet-artifacts'
