--- a/android/apps/location/src/main/AndroidManifest.xml
+++ b/android/apps/location/src/main/AndroidManifest.xml
@@ -8,32 +8,28 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name">
+        android:icon="@mipmap/ic_launcher">
 
         <meta-data
             android:name="SneerApp"
             android:value=""/>
 
         <activity
-            android:name="location.MainActivity"
-            android:excludeFromRecents="true"
-            android:exported="true"
-            android:theme="@android:style/Theme.DeviceDefault.Dialog">
-            <meta-data
-                android:name="sneer:session-type"
-                android:value="follow me"/>
-        </activity>
-
-        <activity
             android:name="location.LocationActivity"
             android:excludeFromRecents="true"
+            android:exported="true"
+            android:label="Send Location"
             android:theme="@android:style/Theme.DeviceDefault.Dialog">
         </activity>
 
         <activity
             android:name="location.FollowMeActivity"
-            android:excludeFromRecents="true">
+            android:excludeFromRecents="true"
+            android:exported="true"
+            android:label="Follow Me">
+            <meta-data
+                android:name="sneer:session-type"
+                android:value="follow me"/>
         </activity>
 
         <service
