--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,11 +32,11 @@ sourceSets {
 }
 
 dependencies {
-  compile 'http-kit:http-kit:2.1.16'
+  compile 'http-kit:http-kit:2.1.18'
   compile 'ring:ring-core:1.3.2'
   compile 'compojure:compojure:1.3.1'
-  compile 'org.clojure:clojure:1.7.0-alpha5'
-  compile 'org.clojure:core.async:0.1.346.0-17112a-alpha'
+  compile external['clojure.core']
+  compile external['clojure.core.async']
   compile external['clojure.core.match']
   compile project(':core')
   testCompile 'midje:midje:1.6.3'
