--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -44,7 +44,8 @@ dependencies {
   }
   compile project(':sneer-android-api')
 
-  compile 'com.android.support:appcompat-v7:22.1.1'
+  compile 'com.android.support:appcompat-v7:22.2.0'
+  compile 'com.android.support:design:22.2.0'
   // compile 'com.android.support:cardview-v7:21.0.+'
   // compile 'com.android.support:recyclerview-v7:21.0.+'
   compile 'com.android.support:multidex:1.0.0'
